--- a/app/views/guided/entries/new.html.erb
+++ b/app/views/guided/entries/new.html.erb
@@ -1,41 +1,41 @@
 <div class="container my-5">
-  <div class="card_guided_entry">
-    <%= simple_form_for :guided_entry_builder, url: guided_entries_path do |f| %>
-      <div id="first-question">
+  <div class="card_guided_entry multisteps-form">
+    <%= simple_form_for :guided_entry_builder, url: guided_entries_path, html: { class: 'multisteps-form__form' } do |f| %>
+      <div id="first-question" class="multisteps-form__panel js-active" data-animation="slideHorz">
         <%= f.fields_for :answer_1 do |fa| %>
           <h5><%= fa.input :content, label: "#{@questions[0].content}", as: :text, input_html: {rows: 5} %></h5>
           <%= fa.input :question_id, as: :hidden, input_html: { value: @questions[0].id } %>
         <% end %>
         <br>
         <%= link_to "Back", menu_path, class: "btn button-sm mx-3"  %>
-        <div id="next-1" class="btn button-sm mx-3">Next</div>
+        <div id="next-1" class="btn button-sm mx-3 js-btn-next">Next</div>
         <br>
         <br>
         <i class="fas fa-circle"></i>
         <i class="far fa-circle"></i>
         <i class="far fa-circle"></i>
       </div>
-      <div id="second-question" class="d-none">
+      <div id="second-question" class="multisteps-form__panel" data-animation="slideHorz">
         <%= f.fields_for :answer_2 do |fa| %>
           <h5><%= fa.input :content, label: "#{@questions[1].content}", as: :text, input_html: {rows: 5} %></h5>
           <%= fa.input :question_id, as: :hidden, input_html: { value: @questions[1].id } %>
         <% end %>
         <br>
-        <div id="back-2" class="btn button-sm mx-3">Back</div>
-        <div id="next-2" class="btn button-sm mx-3">Next</div>
+        <div id="back-2" class="btn button-sm mx-3 js-btn-prev">Back</div>
+        <div id="next-2" class="btn button-sm mx-3 js-btn-next">Next</div>
         <br>
         <br>
         <i class="far fa-circle"></i>
         <i class="fas fa-circle"></i>
         <i class="far fa-circle"></i>
       </div>
-      <div id="third-question" class="d-none">
+      <div id="third-question" class="multisteps-form__panel" data-animation="slideHorz">
         <%= f.fields_for :answer_3 do |fa| %>
           <h5><%= fa.input :content, label: "#{@questions[2].content}", as: :text, input_html: {rows: 5} %></h5>
           <%= fa.input :question_id, as: :hidden, input_html: { value: @questions[2].id } %>
         <% end %>
         <br>
-        <div id="back-3" class="btn button-sm mx-3">Back</div>
+        <div id="back-3" class="btn button-sm mx-3 js-btn-prev">Back</div>
         <%= f.button :submit, "Next", class: "btn button-sm mx-3" %>
         <br>
         <br>
@@ -47,5 +47,7 @@
   </div>
 </div>
 <br>
-<%#= link_to 'Home', root_path, class: 'button-sm'  %>
+
+
+
 
